assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Dancing+Script:wght@400..700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');

/* Ocean Blue Serenity - https://coolors.co/03045e-023e8a-0077b6-0096c7-00b4d8-48cae4-90e0ef-ade8f4-caf0f8 */
:root {
    --federal-blue: #03045eff;
    --marian-blue: #023e8aff;
    --honolulu-blue: #0077b6ff;
    --blue-green: #0096c7ff;
    --pacific-cyan: #00b4d8ff;
    --vivid-sky-blue: #48cae4ff;
    --non-photo-blue: #90e0efff;
    --non-photo-blue-2: #ade8f4ff;
    --light-cyan: #caf0f8ff;
}

body {
    font-family: 'Poppins', sans-serif;
    margin: 0;
    padding: 0;
    background-color: var(--light-cyan);
    /* background-color: #f0f4f8; */
    min-height: 100vh;
    display: flex;
    flex-direction: column;
}

.main-container {
    flex: 1 0 auto;
    display: flex;
    flex-direction: column;
}

.content {
    flex: 1;
    margin-top: 7dvh;
    padding: 20px;
}

footer {
    width: 100%;
    color: rgb(248, 252, 255);
    background-color: rgb(39, 93, 137);
    text-align: center;
    padding: 1px 0 1px 0;
    flex-shrink: 0;
}


/* ============================ */
/* ========== Navbar ========== */
/* ============================ */

.nav-container {
    display: flex;
    align-items: center;
    justify-content: space-between;
    background-color: #ffffff;
    top: 0;
    left: 0;
    width: 100%;
    height: fit-content;
    border-bottom: rgb(0, 92, 137) 3px solid;
    box-shadow: 0px 0px 20px 0px rgba(36, 86, 107, 0.29);
    position: fixed;
    z-index: 1001;
}

.nav-bar {
    display: flex;
    align-items: center;
    width: 100%;
    height: 7dvh;
    z-index: 1002;
}

.nav-brand {
    display: flex;
    align-items: center;
    gap: 10px;
    color: rgb(0, 92, 137);
    font-size: 1.5rem;
    text-decoration: none;
    margin-left: 1.5dvw;
}

.nav-brand-logo {
    height: 25px;
    width: 25px;
    border-radius: 8px;
}

.nav-brand-link {
    text-decoration: inherit;
    color: inherit;
}

.nav-brand-name {
    text-decoration: inherit;
    font-size: 1.4rem;
    color: rgb(2, 119, 178);
}

.nav-links-container {
    display: flex;
    align-items: center;
    flex: 1;
}

.nav-links {
    display: flex;
    align-items: center;
    gap: 18px;
    margin-left: 32px;
}

.nav-links a {
    color: rgb(0, 0, 0);
    font-size: 1.1rem;
    transition:
        /*font-size 0.2s ease,*/
        color 0.2s ease;
    text-decoration: none;
}

.nav-links a:hover {
    /* font-size: 1.02rem; */
    color: #136f8a;
}

.nav-user {
    display: flex;
    align-items: center;
    justify-content: flex-end;
    margin-left: auto;
}

.nav-uname {
    color: rgb(99, 99, 99);
    font-size: 1.1rem;
}

.nav-user .dropdown {
    margin-right: 2.5dvw;
}

.nav-user-icon {
    padding-right: 0.5dvw;
    font-size: 2.4rem;
    cursor: pointer;
}

.nav-user-name {
    font-size: 1rem;
    position: relative;
}

.dropdown-content {
    display: none;
    position: absolute;
    border-radius: 15px;
    right: 0 + 8px;
    top: 100%;
    background-color: #fff;
    min-width: 120px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
    border-width: 2px;
    border-color: #0077b6;
    z-index: 1003;
}

.dropdown-content a {
    color: #333;
    padding: 10px 16px;
    text-decoration: none;
    display: block;
    border-radius: 15px;
}

.dropdown-content a:hover {
    background-color: #f1f1f1;
}

.dropdown {
    position: relative;
}

.dropdown:hover .dropdown-content,
.dropdown-content:hover {
    display: block;
    transition: 0.3s ease;
}

.nav-login {
    margin-right: 1dvw;
}


/* ============================ */
/* ======== Login Page ======== */
/* ============================ */

.login-container {
    width: 100%;
    display: block;
    text-align: center;
    justify-content: center;
    align-items: center;
    margin: 0;
    padding: 0;
}

.form-box {
    width: 90%;
    max-width: 450px;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    background: #fff;
    padding: 20px 50px 40px;
    text-align: center;
    border-radius: 45px;
    box-shadow: 12px 12px 12px rgba(0, 0, 0, 0.1);
}

.form-box h1 {
    font-size: 30px;
    margin-bottom: 60px;
    color: rgb(0, 92, 137);
    position: relative;
}

.form-box h1::after {
    content: '';
    width: 30px;
    height: 4px;
    border-radius: 5px;
    background: rgb(0, 78, 116);
    position: absolute;
    bottom: -12px;
    left: 50%;
    transform: translate(-50%);
}

.input-field {
    background: #eaeaea;
    margin: 15px 0;
    border-radius: 15px;
    display: flex;
    align-items: center;
    max-height: 65px;
    transition: max-height 0.5s;
    overflow: hidden;
}

.icon {
    text-align: center;
}

.icon i {
    color: rgb(111, 150, 169);
    padding-left: 0.8rem;
    padding-right: 2.2rem;
    padding-bottom: 0.8rem;
    padding-top: 0.6rem;
    border-radius: 0.6px;
    font-size: 1.5rem;
    cursor: pointer;
    margin: 0.2px 15px;
}

.lost-pass a:hover {
    color: rgb(0, 136, 204);
    transition: 0.5s ease;
}

.icon i:hover {
    color: rgb(0, 81, 121);
    transition: 0.5s ease;
}

#signupBtn:hover {
    background: rgb(1, 135, 201);
    transition: 0.3s ease;
}

#signinBtn:hover {
    background: rgb(216, 243, 255);
    transition: 0.3s ease;
}

input {
    width: 100%;
    background: transparent;
    border: 0;
    outline: 0;
    padding: 18px 15px;
}

.input-field i {
    margin-left: 15px;
    color: #999;
}

form p {
    text-align: left;
    font-size: 13px;
}

form p a {
    text-decoration: none;
    color: rgb(0, 92, 137);
}

.btn-field {
    width: 100%;
    display: flex;
    justify-content: space-between;
}

.btn-field-center {
    width: 100%;
    display: flex;
    justify-content: center;
}
/* ... */

